--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "./node_modules/.bin/nodemon index.js",
+  "scripts": {
+    "dev": "./node_modules/.bin/env-cmd ./node_modules/.bin/nodemon index.js",
+    "dev:migrate": "./node_modules/.bin/env-cmd ./node_modules/.bin/sequelize db:migrate --env development --config ./configs/sequelize.js",
     "lint": "./node_modules/.bin/eslint --format codeframe .",
-    "lint:fix": "./node_modules/.bin/eslint --fix --format codeframe .",
-    "test": "./node_modules/.bin/mocha tests/**/*.test.js"
+    "lint:fix": "./node_modules/.bin/eslint --fix --format codeframe ."
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/Open-Avenues-Foundation/P21045-1#readme",
   "devDependencies": {
     "chai": "^4.3.4",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.6.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15"
@@ -29,7 +31,9 @@
     "csv-parse": "^5.0.4",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
-    "papaparse": "^5.3.1",
-    "sequelize": "^6.12.5"
+    "sequelize": "^6.12.5",
+    "sequelize-cli": "^6.4.1",
+    "twilio": "^3.73.0"
   }
+}
 }
