--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
- "scripts": {
-    "dev": "./node_modules/.bin/env-cmd ./node_modules/.bin/nodemon index.js",
+  "scripts": {
+    "dev:server": "./node_modules/.bin/env-cmd ./node_modules/.bin/nodemon index.js",
     "dev:migrate": "./node_modules/.bin/env-cmd ./node_modules/.bin/sequelize db:migrate --env development --config ./configs/sequelize.js",
     "lint": "./node_modules/.bin/eslint --format codeframe .",
-    "lint:fix": "./node_modules/.bin/eslint --fix --format codeframe ."
+    "lint:fix": "./node_modules/.bin/eslint --fix --format codeframe .",
+    "dev:client": "cd client && npm start",
+    "dev:client:build": "cd client && npm run build",
+    "dev": "concurrently \"npm:dev:server\" \"npm:dev:client\""
   },
   "repository": {
     "type": "git",
@@ -21,12 +24,14 @@
   "homepage": "https://github.com/Open-Avenues-Foundation/P21045-1#readme",
   "devDependencies": {
     "chai": "^4.3.4",
+    "concurrently": "^7.0.0",
     "env-cmd": "^10.1.0",
     "eslint": "^8.6.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "csv-parse": "^5.0.4",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
